blockml/test/errors/12_chart/e192/e192_one.view
view: e192_one
table: 1
fields:
- dimension: dim1
  sql: 111
